text alignment fixed

--- a/src/component/index.styles.scss
+++ b/src/component/index.styles.scss
@@ -1,9 +1,9 @@
 .home {
   color: #ffff;
-  font-family: "Barlow";
-  font-size: 20px;
-  font-weight: 800;
-  padding: 10px;
+  font-family: "Fraunces";
+  font-size: 26px;
+  font-weight: 900;
+  padding: 5px;
 }
 
 .header-section {
@@ -46,13 +46,11 @@
   flex-direction: row;
 }
 .card {
-  display: inline-block;
   width: 50%;
   height: 500px;
 }
 
 .block-image {
-  display: inline-block;
   width: 50%;
   height: 500px;
   background-size: cover;
@@ -84,14 +82,22 @@
   font-size: 25px;
   padding: 30px;
   text-align: left;
+  box-sizing: border-box;
+}
+.egg {
   &:hover {
-    background: yellow;
-    color: #000;
-    font-weight: 500;
-    border-radius: 30px;
+    text-decoration: underline;
+    text-decoration-color: yellow;
+    text-decoration-thickness: 5px;
   }
 }
-
+.glass {
+  &:hover {
+    text-decoration: underline;
+    text-decoration-color: palevioletred;
+    text-decoration-thickness: 5px;
+  }
+}
 .graphic-design-heading {
   padding: 20px;
   font-family: "Fraunces";
@@ -101,6 +107,7 @@
   color: hsl(168, 34%, 41%);
   position: absolute;
   bottom: 150px;
+  left: 20%;
 }
 .graphic-design-content {
   text-align: center;
@@ -115,13 +122,14 @@
   font-weight: 900;
   font-size: 25px;
   text-align: center;
-  color: hsl(213, 9%, 39%);
+  color: hsl(198, 62%, 26%);
   position: absolute;
   bottom: 150px;
+  left: 30%;
 }
 .photography-content {
   text-align: center;
-  color: hsl(213, 9%, 39%);
+  color: hsl(198, 62%, 26%);
   position: absolute;
   bottom: 56px;
   padding: 20px;
@@ -155,7 +163,7 @@
   padding-top: 15px;
 }
 .designation {
-  font-size: 13px;
+  font-size: 15px;
   font-family: "Fraunces";
   color: hsl(213, 9%, 39%);
   padding-bottom: 30px;
